<resources>
    <string name="app_name">RxJava2Examples</string>


    <!--behavior-->
    <string name="simple_view_behavior">com.nanchen.rxjava2examples.ui.SimpleViewBehavior</string>
    <string name="translate_up_down_behavior">com.nanchen.rxjava2examples.ui.TranslateUpDownBehavior</string>

    <string name="home">主页</string>

    <!--rx-->
    <string name="doSomething">doSomething</string>
    <string name="rx_create">create</string>
    <string name="rx_just">just</string>
    <string name="rx_map">map</string>
    <string name="rx_zip">zip</string>
    <string name="rx_flatMap">flatMap</string>
    <string name="rx_concatMap">concatMap</string>
    <string name="rx_filter">filter</string>
    <string name="rx_take">take</string>
    <string name="rx_doOnNext">doOnNext</string>
    <string name="rx_timer">timer</string>
    <string name="rx_interval">interval</string>
    <string name="rx_single">single</string>
    <string name="rx_skip">skip</string>
    <string name="rx_concat">concat</string>
    <string name="rx_distinct">distinct</string>
    <string name="rx_buffer">buffer</string>
    <string name="rx_debounce">debounce</string>
    <string name="rx_defer">defer</string>
    <string name="rx_last">last</string>
    <string name="rx_merge">merge</string>
    <string name="rx_reduce">reduce</string>
    <string name="rx_scan">scan</string>
    <string name="rx_window">window</string>
    <string name="rx_PublishSubject">PublishSubject</string>
    <string name="rx_AsyncSubject">AsyncSubject</string>
    <string name="rx_BehaviorSubject">BehaviorSubject</string>
    <string name="rx_Completable">Completable</string>
    <string name="rx_Flowable">Flowable</string>

</resources>
